Docs arrow z-index fix

--- a/src/styles/_docs.scss
+++ b/src/styles/_docs.scss
@@ -109,7 +109,7 @@
 
 .docs-nav__item__arrow{
   position: absolute;
-  z-index: 999;
+  z-index: 400;
   left: 0;
   top: 0;
   width: 20px;
